<package format="2">
    <name>alb_base</name>
    <version>1.2.4</version>
    <description>
        This package provides foo capability.
    </description>
    <maintainer email="seitz-oliver@gmx.de">Oliver Seitz</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
</package>