<package>
    <name>alb_ros_msgs</name>
    <version>1.2.4</version>
    <description>
        This package provides foo capability.
    </description>
    <maintainer email="seitz-oliver@gmx.de">Oliver Seitz</maintainer>
    <license>BSD</license>

    <build_depend>message_generation</build_depend>
    <run_depend>message_runtime</run_depend>

    <buildtool_depend>catkin</buildtool_depend>
</package>