<package format="2">
    <name>alb_ros_msgs</name>
    <version>1.2.4</version>
    <description>
        This package provides foo capability.
    </description>
    <maintainer email="seitz-oliver@gmx.de">Oliver Seitz</maintainer>
    <license>BSD</license>

    <depend>alb_msgs</depend>
    <depend>message_generation</depend>
    <depend>message_runtime</depend>

    <buildtool_depend>catkin</buildtool_depend>
</package>