<package format="2">
    <name>cam_transform</name>
    <version>1.2.4</version>
    <description>
        This package provides foo capability.
    </description>
    <maintainer email="seitz-oliver@gmx.de">Oliver Seitz</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>message_generation</depend>
    <depend>message_runtime</depend>
    <depend>alb_msgs</depend>
    <depend>alb_ros_msgs</depend>
    <depend>geometry_msgs</depend>

</package>