<package format="2">
    <name>static_environment</name>
    <version>1.2.4</version>
    <description>
        This package provides foo capability.
    </description>
    <maintainer email="seitz-oliver@gmx.de">Oliver Seitz</maintainer>
    <license>BSD</license>

    <depend>alb_ros_base</depend>
    <depend>std_msgs</depend>

    <buildtool_depend>catkin</buildtool_depend>
</package>